@@ -26,11 +26,24 @@
 
 class LircInput {
 	boost::asio::posix::stream_descriptor d;
+
+#if BOOST_VERSION >= 107000
+	boost::asio::io_context &io_context;
+#endif
+
 	struct lirc_config *lc = nullptr;
 
 public:
 	explicit LircInput(boost::asio::io_service &io_service);
 	~LircInput();
+
+	auto &get_io_context() noexcept {
+#if BOOST_VERSION >= 107000
+		return io_context;
+#else
+		return d.get_io_service();
+#endif
+	}
 
 private:
 	void AsyncWait() {
