@@ -1,6 +1,7 @@
 ncmpc 0.34 - not yet released
 * fix high CPU usage in key bindings check
 * fix background color "none"
+* adapt to Boost 1.70.0 API changes
 
 ncmpc 0.33 - (2018-10-22)
 * artist page: rename to "library"
